--- a/ToDoList/style.css
+++ b/ToDoList/style.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap");
+
 * {
   margin: 0;
   padding: 0;
@@ -7,87 +8,101 @@
   outline: none;
   border: none;
   font-family: "Fredoka One", cursive;
-  color: #474747;
+  color: #464646;
 }
 
 body {
   padding: 5rem 0;
-  background: linear-gradient(125deg, #fd4a1d 0%, #fcb045 100%);
+  background: linear-gradient(125deg, #ff00c8 0%, #ffffff 100%);
   min-height: 100vh;
 }
+
 body .container {
   width: 540px;
   margin: 0 auto;
   text-align: center;
-  background: linear-gradient(125deg, #5effc9 0%, #45c2fc 100%);
+  background: linear-gradient(125deg, #ffffff 0%, #f502F9 100%);
   padding: 2rem 1rem;
   border-radius: 35px;
   box-shadow: 0px 10px 30px 0px #3f3f3f;
 }
+
 body h1 {
   text-transform: uppercase;
   letter-spacing: 0.4rem;
   font-size: 2.35rem;
-  text-shadow: -1px 3px 2px #fd4a1d;
+  text-shadow: -1px 3px 2px #d420bf;
 }
+
 body form {
   margin: 2rem 0;
 }
+
 body form input {
   width: 250px;
   height: 50px;
   border-radius: 50px;
   padding: 0 1rem;
-  border: 2px solid #fd4a1d;
+  border: 2px solid #ffffff;
   font-size: 1.3rem;
-  background: linear-gradient(125deg, #fd4a1d 0%, #fcb045 100%);
-  color: #5effc9;
+  background: linear-gradient(125deg, #d8209f 0%, #debcde 100%);
+  color: #464646;
   box-shadow: 0px 2px 10px 0px #3f3f3f;
   transition: 0.7s;
 }
+
 body form input::placeholder {
-  color: #5effc9;
+  color: #464646;
 }
+
 body form input:focus {
-  border: 3px solid #ffee00;
+  border: 3px solid #de10b1;
 }
+
 body ul {
   text-align: left;
 }
+
 body ul li {
   list-style: none;
   padding: 0.7rem;
   position: relative;
   font-size: 1.2rem;
   cursor: pointer;
+  overflow-wrap: anywhere;
 }
+
 body ul li:before {
   content: "✽";
   padding: 0.6rem;
   font-size: 1.3rem;
-  color: #fd4a1d;
+  color: #fd3705;
 }
+
 body ul li:after {
   opacity: 0;
 }
+
 body ul li:hover:after {
   content: " (terminé)";
   opacity: 0;
   font-size: 1.1rem;
-  color: #fd4a1d;
+  color: #ffffff;
   font-style: italic;
   animation: pseudoClassAnim 1s forwards;
 }
+
 body ul .checked:before {
   content: "✔";
   padding: 10px 10px;
   font-size: 1.1rem;
   color: #fd4a1d;
 }
+
 body ul .checked:hover:after {
   content: " (supprimer)";
   font-size: 1.1rem;
-  color: #fd4a1d;
+  color: #ffffff;
   opacity: 0;
 }
 
