--- a/SelecteurAleatoire/style.css
+++ b/SelecteurAleatoire/style.css
@@ -5,43 +5,73 @@
 }
 .personne-chosen{
     width: 100%;
-    height: 250px;
+    height: 200px;
     text-align: center;
-    border: solid red 1px;
     display: flex;
     align-items: center;
     flex-direction: column;
 }
 
-.li-not-passed, .li-passed, div-btn-choisir{
+.li-not-passed, .li-passed, .div-btn-choisir{
     width: 33%;
     text-align: center;
 }
 body{
-    background-color: rgb(16, 29, 49);
+    /* background-color: rgb(16, 29, 49); */
+    background: linear-gradient(318deg, rgba(6,33,55,1) 0%, rgba(95,182,203,1) 100%);
+    min-height: 100vh;
     color: white;
 }
 
 h1{
-    color: rgb(212, 141, 25);
+    color: rgb(252, 255, 71);
+    margin-top: 2px;
+    margin-bottom: 10px;
 }
 #btn-choisir{
-    height: 200px;
+    height: 140px;
     width: 200px;
-    border-radius: 100%;
-    background-color: rgb(216, 4, 4);
+    border-radius: 25px;
+    background: linear-gradient(70deg, rgb(12, 66, 110) 0%, rgb(86, 184, 206) 100%);
     font-size: 26px;
     border: none;
+    color: white;
+}
+#btn-choisir:active{
+    border-top: solid 2px black;
+    border-left: solid 2px rgb(0, 0, 0);
+    border-right: solid 2px rgb(0, 0, 0);
+    border-bottom: solid 2px rgb(0, 0, 0);
 }
 .apprenant{
     height: 50px;
     transition: all .5s ease-in-out;
     border-radius: 50px;
-    /* border: solid, 3px black; */
+    margin: 2px;
+    position: relative;
+    border: solid 2px white;
 }
+
+
 
 #img-personne-choisi{
     height: 100px;
     width: 150px;
     background-color: cadetblue;
+}
+
+#passed, #not-passed{
+    display: none;
+}
+
+@media screen and (max-width : 768px) {
+    .li-not-passed, .li-passed, .div-btn-choisir{
+        width: 100%;
+    }
+    .li-not-passed{
+        min-height: 180px;
+        margin: 5px;
+    }
+    .personne-chosen{
+        height: 160px;}
 }
